12-updating_strategy/canary/manifests/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bgc-gateway
  namespace: canary
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
#    - port:
#        number: 443
#        name: https
#        protocol: HTTPS
#      tls:
#        mode: SIMPLE
#        credentialName: ingress-cert # This should match the Certificate secretName
      hosts:
#        - "*"
        - "canary.dens-al.ru"
