12-updating_strategy/canary/manifests/vs_blue_green.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
  namespace: canary
spec:
  hosts:
    - "*"
  gateways:
    - bgc-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-green
          weight: 80
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-blue
          weight: 10
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-yellow
          weight: 10
