12-updating_strategy/canary/manifests/vs_blue_green_default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blue-green-canary
  namespace: canary
spec:
  hosts:
#    - "*"
    - "canary.dens-al.ru"
  gateways:
    - bgc-gateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /
      route:
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-blue
          weight: 100
    - match:
        - uri:
            prefix: /api
      rewrite:
        uri: /api
      route:
        - destination:
            host: blue-green-canary
            port:
              number: 8080
            subset: version-blue
          weight: 100
